--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "app",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "webpack": "^4.42.1",
+    "webpack-dev-server": "^3.10.3"
+  }
 }
