seting up metadata initiliazers and configurations for robust metedata

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "TV, Radio, Reflexiones para la vida familiar Orientacion Familiar Una Guia Para El Hogar"
 meta_title: "Orientacion Familiar Una Guia Para El Hogar"
-meta_description: "Relevant description"
+meta_description: "TV, Radio, Reflexiones para la vida familiar Orientacion Familiar Una Guia Para El Hogar"
 meta_image: "banner.png" # should exist in `app/assets/images/`
 twitter_account: "@product_twitter_account"   # required for Twitter Cards
